# bungee-python

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.py  pixi.toml  pyproject.toml
.github/workflows/: python-publish.yml
src/: bindings.cpp
src/bungee_python/: __init__.py  bungee.pyi
